--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ packages = [{include = "byzml_genbenefit", from = "src"}]
 python = "^3.10"
 
 
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^3.1.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
