--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,25 @@ python = "^3.10"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.1.1"
+pytest = "^7.2.1"
+pytest-cov = "^4.0.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+addopts = [
+    "--import-mode=importlib",
+    "--cov-report=term-missing",
+]
+
+pythonpath = [
+    "src/",
+    "tests/",
+]
+
+[tool.coverage.run]
+omit = [
+    "src/main.py",
+]
