--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ packages = [{include = "byzml_genbenefit", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+torch = "^1.13.1"
+torchvision = "^0.14.1"
+tqdm = "^4.65.0"
 
 
 [tool.poetry.group.dev.dependencies]
