--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ matplotlib = "^3.7.1"
 pre-commit = "^3.1.1"
 pytest = "^7.2.1"
 pytest-cov = "^4.0.0"
+line-profiler = "^4.0.3"
 
 [build-system]
 requires = ["poetry-core"]
