--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "byzml_genbenefit", from = "src"}]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "3.10.x"
 torch = "^1.13.1"
 torchvision = "^0.14.1"
 tqdm = "^4.65.0"
