--- a/data/.gitignore
+++ b/data/.gitignore
@@ -1,4 +1,5 @@
 # The directory is usefull to see the structure of the project and to know where to put the data
 # but we dont want to push it to github because it is too big
-
+cifar-10-python.tar.gz
+cifar-10-batches-py/
 MNIST/
