--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ torch = "^1.13.1"
 torchvision = "^0.14.1"
 tqdm = "^4.65.0"
 matplotlib = "^3.7.1"
+scikit-learn = "^1.2.2"
 
 
 [tool.poetry.group.dev.dependencies]
