add pandas as dependencies and rework of visu.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ torchvision = "^0.14.1"
 tqdm = "^4.65.0"
 matplotlib = "^3.7.1"
 scikit-learn = "^1.2.2"
+pandas = "^2.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
